main page fix
messed up the js for login enforcement. Just changes some syntax. Also, removed aggregate button from main page.

--- a/css/upls_styles.css
+++ b/css/upls_styles.css
@@ -131,7 +131,6 @@
 	width: fit-content;
 	min-width: 25em;
 	height: 5em;
-	padding: 3px;
 }
 
 .large_button:hover {
